--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "bootstrap-vue": "^0.18.0",
+    "d3": "^4.10.0",
+    "jquery": "^3.2.1",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0"
   },
